# masterAflokkat

./: .gitignore
bddAvancer/Dossier_Projet_SQL3_ESIA_2023_2024/: 2specification_analyse_conception_Chabran.docx  3Script_Implementation_type_tables_objet_gestionDuneBibliotheque_Chabran.sql  4Script_Mapping_objet_Relationnel_avec_Jdbc_NomProjet_Chabran.txt
bddAvancer/cours1 -271123/: premierScriptRef.sql
cloud/: 2024_cloud_02_general_dangers.pptx  2024_cloud_03_TP_setup.pptx  2024_cloud_10_compute.pptx  2024_cloud_20_storage_technos.pptx  2024_cloud_21_storage_databases.pptx  2024_cloud_23_TP_storage.pptx  2024_cloud_30_network.pptx  2024_cloud_33_TP_network.pptx  2024_cloud_40_infra-as-code.pptx  2024_cloud_45_TP_project.pptx  2024_cloud_50_conclusion.pptx
cyberSecu/: test.pkt
devOps/: 2024_devops_1_general.pptx  2024_devops_2_TP.pptx  2024_devops_2_golang_openapi.pptx  2024_devops_3_docker.pptx  2024_devops_4_testing_strategies.pptx  2024_devops_5_deploy.pptx  2024_devops_6_monitor_operate.pptx  2024_devops_7_automate.pptx  2024_devops_extra_network.pptx
flutter/: td1.dart
hadoop/: readMe.md
machineLearning/cours3-021023/guess-number-main/: .gitignore  db.sqlite3  pyproject.toml
machineLearning/cours3-021023/guess-number-main/app/: monia.py  urls.py
machineLearning/cours3-021023/guess-number-main/app/templates/: index.html
machineLearning/cours3-021023/guess-number-main/app/templates/partials/: guess.html
machineLearning/cours3-021023/guess-number-main/project/: settings.py
ml_ml/: TP1_Time_Series.ipynb  TP2_Time_Series.ipynb  Untitled-1.ipynb
(+270 files in other folders)
